--- a/examples/slack/package.json
+++ b/examples/slack/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@antispace/sdk": "latest",
+    "@google/generative-ai": "^0.24.1",
     "@slack/events-api": "^3.0.1",
     "@slack/socket-mode": "^2.0.4",
     "@slack/web-api": "^7.9.2"
